--- a/.classpath
+++ b/.classpath
@@ -1,7 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
-	<classpathentry including="**/*.java" kind="src" output="target/test-classes" path="src/test/java"/>
-	<classpathentry excluding="**/*.java" kind="src" output="target/test-classes" path="src/test/resources"/>
 	<classpathentry including="**/*.java" kind="src" path="src/main/java"/>
 	<classpathentry kind="src" path="target/generated-sources/mule"/>
 	<classpathentry excluding="**/*.java" kind="src" path="src/main/resources"/>
@@ -52,7 +50,7 @@
 	<classpathentry kind="var" path="M2_REPO/org/antlr/stringtemplate/3.2.1/stringtemplate-3.2.1.jar"/>
 	<classpathentry kind="var" path="M2_REPO/com/google/guava/guava/18.0/guava-18.0.jar"/>
 	<classpathentry kind="var" path="M2_REPO/org/reflections/reflections/0.9.9/reflections-0.9.9.jar"/>
-	<classpathentry kind="var" path="M2_REPO/org/mule/tools/devkit/mule-devkit-annotations/3.8.0/mule-devkit-annotations-3.8.0.jar" sourcepath="M2_REPO/org/mule/tools/devkit/mule-devkit-annotations/3.8.0/mule-devkit-annotations-3.8.0-sources.jar"/>
+	<classpathentry kind="var" path="M2_REPO/org/mule/tools/devkit/mule-devkit-annotations/3.8.0/mule-devkit-annotations-3.8.0.jar"/>
 	<classpathentry kind="var" path="M2_REPO/org/mule/tools/devkit/mule-devkit-shade/3.8.0/mule-devkit-shade-3.8.0.jar"/>
 	<classpathentry kind="var" path="M2_REPO/org/mule/modules/mule-module-annotations/3.7.0/mule-module-annotations-3.7.0.jar"/>
 	<classpathentry kind="var" path="M2_REPO/cglib/cglib-nodep/2.2/cglib-nodep-2.2.jar"/>
